# Shmup-Game

./: .clang-tidy  .clang_format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  shoot.radius  shoot_.radius
Event/: CMakeLists.txt
Event/include/Event/: GameEvent.hpp
Object/: CMakeLists.txt
Object/include/Object/: Behaviour.hpp  Bullet.hpp  Enemy.hpp  ObjBase.hpp  Player.hpp  Pool.hpp  World.hpp  helpers.hpp
Object/src/: Bullet.cpp  Enemy.cpp  FireMode.cpp  FireMode.hpp  ObjBase.cpp  Player.cpp  World.cpp
Window/: CMakeLists.txt
Window/include/Window/: Window.hpp
Window/src/: Window.cpp
include/: SFMLApp.hpp  SFMLGame.hpp
object/: CMakeLists.txt
object/include/: Behaviour.hpp  Bullet.hpp  Enemy.hpp  ObjBase.hpp  Object.hpp  Player.hpp  helpers.hpp  object.hpp
object/src/: Bullet.cpp  Enemy.cpp  Player.cpp  object.cpp
object/tests/: CMakeLists.txt
src/: Handler.cpp  Handler.hpp  SFMLApp.cpp  SFMLGame.cpp  World.cpp  World.hpp  main.cpp
window/: CMakeLists.txt
window/include/: Window.hpp
window/tests/: CMakeLists.txt
